# web-menorah

./: .travis.yml  1.bundle.js  Cargo.toml  LICENSE.md  README.md  index.html  io.bundle.js  mainWorker.js  package-lock.json  package.json  tsconfig.json  webpack.common.js  webpack.dev.js  webpack.prod.js
printouts/: virtual-menorah.ai
site/: index.html
site/static/: opencv.js  opencv_js.js  opencv_js.wasm  styles.css
site/static/models/day1/: menorah.gltf
src/: Ambient-Modules.d.ts  Main-App.ts  Main-Worker.ts  Wasm-Loader.ts  lib.rs
src/game/: game.rs
src/io/controller/: Controller.ts
src/io/fonts/: Fonts.ts
src/io/renderer/: Renderer.ts
src/io/renderer/lines/: Lines.ts
src/io/scene/: Scene.ts
src/io/types/: Renderable-Types.ts  Types.ts  Worker-Types.ts
src/io/video/: Video.ts
src/opencv/: OpenCv.ts
static/: styles.css
