[package]
name = "web_menorah"
version = "0.1.0"
authors = ["David Komer <david.komer@gmail.com>"]
edition = '2018'

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[dependencies]
wasm-bindgen = "0.2.28"
js-sys = "0.3.4"
arcball = "0.3.1"
cgmath = "0.16.1"
sodium-rust-push-pull = {git = "https://github.com/clinuxrulz/sodium-rust-push-pull"}

[dependencies.web-sys]
version = "0.3.4"
features = [
  'CanvasRenderingContext2d',
  'CssStyleDeclaration',
  'Document',
  'DomRect',
  'Element',
  'EventTarget',
  'HtmlCanvasElement',
  'HtmlElement',
  'MouseEvent',
  'Node',
  'Window',
  'console',
]
